# Template_cmake

Cmake/: .clang-format  CMakeLists.txt
Cmake/src/: CMakeLists.txt  main.cpp
Cmake/src/Mode/: CMakeLists.txt
Cmake/src/SmartCard/: scard_factory.cpp  scard_factory.h  smart_card.cpp  smart_card.h
Cmake/test/: CMakeLists.txt  test.cpp  test_spdlog.cpp
Cmake/third_lib/public_lib/include/: public.h
Cmake/third_lib/public_lib/lib/: PUBLIC.LIB
Qt Cmake/: CMakeLists.txt
Qt Cmake/src/: CMakeLists.txt  main.cpp
Qt Cmake/src/MainWindow/: CMakeLists.txt
Qt Cmake/src/Window/: CMakeLists.txt  window.h
Qt Cmake/src/main_window/: main_window.cpp  main_window.h
Qt Cmake/third_lib/public_lib/include/: cmpublic.h
Qt Cmake/ui/: main_window.ui
cmake/: .clang-format  CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/test/: CMakeLists.txt
qt-cmake/: .clang-format  .gitignore  CMakeLists.txt
qt-cmake/lib/: Window.lib  Windows.lib  app.lib
qt-cmake/res/: img.qrc
qt-cmake/res/rc/: images.qrc
qt-cmake/src/: CMakeLists.txt  main.cpp
qt-cmake/src/app/: main_window.cpp  main_window.h  main_window.ui
qt-cmake/src/windows/: CMakeLists.txt
qt-cmake/test/: CMakeLists.txt
qt-cmake/ui/: main_window.ui
